--- a/index.html
+++ b/index.html
@@ -3,24 +3,65 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>game to play</title>
+    <title>Discover Fun Games</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            text-align: center;
+            margin: 20px;
+            background-color: #f8f8f8;
+            color: #333;
+        }
+        h1 {
+            color: #3498db;
+        }
+        button {
+            padding: 12px 20px;
+            margin: 8px;
+            font-size: 18px;
+            background-color: #3498db;
+            color: #fff;
+            border: 2px solid #3498db;
+            border-radius: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s, color 0.3s;
+        }
+        button:hover {
+            background-color: #2980b9;
+            color: #fff;
+        }
+        .game-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 15px;
+            margin-top: 30px;
+        }
+    </style>
 </head>
 <body>
-    games to play click the buttons below
-    <a href="./Dash.github.io-main/Dash.github.io-main/index.html">
-    <button>car game</button>
-    </a>
-    <a href="./fighting-game-main/fighting-game-main/index.html">
-   <button>fighting game</button>
-   </a>
-   <a href="./kings-and-pigs-main/kings-and-pigs-main/index.html">
-    <button>door opening game</button>
-    </a>
-    <a href="./pacman-main/pacman-main/index.html">
-    <button>better pacman</button>
-    </a>
-    <a href="./vertical-platformer-main/vertical-platformer-main/index.html">
-    <button>vertical paltfomer game</button>
-    </a>
+    <h1>Discover Fun Games</h1>
+    
+    <div class="game-container">
+        <a href="./Dash.github.io-main/Dash.github.io-main/index.html">
+            <button>Car Game</button>
+        </a>
+
+        <a href="./fighting-game-main/fighting-game-main/index.html">
+            <button>Fighting Game</button>
+        </a>
+
+        <a href="./kings-and-pigs-main/kings-and-pigs-main/index.html">
+            <button>Door Opening Game</button>
+        </a>
+
+        <a href="./pacman-main/pacman-main/index.html">
+            <button>Better Pacman</button>
+        </a>
+
+        <a href="./vertical-platformer-main/vertical-platformer-main/index.html">
+            <button>Vertical Platformer Game</button>
+        </a>
+    </div>
 </body>
 </html>
