--- a/index.html
+++ b/index.html
@@ -59,5 +59,8 @@
             <button>Better Pacman</button>
         </a>
     </div>
+    <audio autoplay loop>
+        <source src="Geometry Dash Stereo Madness soundtrack.mp3">
+    </audio>
 </body>
 </html>
