--- a/index.html
+++ b/index.html
@@ -58,6 +58,10 @@
         <a href="./pacman-main/pacman-main/index.html">
             <button>Better Pacman</button>
         </a>
+        <a href="./
+Mario Game/Mario Game/index.html">
+            <button>mario</button>
+        </a>
     </div>
     <audio autoplay loop>
         <source src="Geometry Dash Stereo Madness soundtrack.mp3">
