--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover Fun Games</title>
     <style>
+        @font-family {
+            url("/Josefin_Slab/static
+/JosefinSlab-BoldItalic.ttf")
+        }
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             text-align: center;
