added fake flappy bird

--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
 Mario Game/Mario Game/index.html">
             <button>mario</button>
         </a>
+        <a href="./Flappy-Bird-Game-main/Flappy-Bird-Game-main/index.html">
+            <button>fake flappybird</button>
+        </a>
     </div>
 </body>
 </html>
