--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             margin-top: 30px;
         }
     </style>
+    <link rel="icon" type="image/png" href="./favicon.png">
 </head>
 <body>
     <h1>Discover Fun Games</h1>
